# AgenticFlow

./: .filter-repo-replacements.txt  .gitignore  .gitleaks.toml  BASLAT.bat  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  create_shortcut.bat  docker-compose.yml  llms.txt  start_backend.bat  start_frontend.bat
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: cd868abd5d6d_baseline_schema_sprint_6.py
backend/app/: config.py  database.py  logging_config.py  main.py  metrics.py  startup_recovery.py
backend/app/engine/: context.py  errors.py  executor.py  node_base.py
backend/app/middleware/: api_key.py  logging.py
backend/app/models/: __init__.py  app_setting.py  chat.py  execution.py  polling_snapshot.py  site.py  workflow.py
backend/app/nodes/: __init__.py
backend/app/nodes/ai/: _common.py  classify.py  claude_prompt.py  extract.py  vision.py  vision_batch.py
backend/app/nodes/input/: __init__.py  excel_read.py
backend/app/nodes/logic/: if_condition.py  loop.py  switch.py
backend/app/nodes/output/: csv_export.py  excel_export.py  json_export.py  log_node.py
backend/app/nodes/ticimax/: _auto_generated.py  set_siparis_durum_batch.py  siparis.py  stok_guncelle_by_barkod.py  update_aciklama_batch.py  update_ozel_alan_1_batch.py  urun.py
backend/app/nodes/transform/: aggregate.py  filter.py  map_node.py  only_new.py  parse_stok.py
backend/app/nodes/triggers/: manual.py  polling.py  schedule.py
backend/app/routers/: agent.py  executions.py  nodes.py  settings.py  sites.py  support.py  uploads.py  workflows.py
backend/app/schemas/: agent.py  execution.py  settings.py  site.py  support.py  workflow.py
backend/app/seeds/: support_workflow.py
backend/app/services/: agent_service.py  crypto_service.py  scheduler_service.py  settings_service.py  telegram_bot_service.py  ticimax_service.py
backend/app/services/llm/: __init__.py  anthropic_api.py  anthropic_cli.py  base.py  google_genai.py
backend/app/utils/: time.py  zeep_helpers.py
backend/scripts/: __init__.py  generate_node_catalog.py  seed_db.py
backend/scripts/debug/: __init__.py  check_n6.py  debug_tickets.py
backend/scripts/legacy_scripts/: README.md  __init__.py  smoke_test_set_siparis_durum.py  smoke_test_update_oa1.py  test_support_agent.py  test_support_full_workflow.py  test_support_messages_ui.py  test_support_ui.py  test_support_ui_full.py  test_support_ui_iade.py  test_support_workflow_ui.py  ui_test_dry_run.py  ui_test_oa1.py  ui_test_schedule.py  ui_test_wf9_dryrun.py
backend/tests/: conftest.py
backend/tests/contract/: test_node_registry_contract.py
backend/tests/integration/: test_api_key_middleware.py  test_executor_full_graph.py  test_only_new_snapshot.py  test_routers_smoke.py  test_scheduler_service.py  test_startup_recovery.py
backend/tests/unit/: test_ai_common.py  test_logging_config.py  test_metrics.py
backend/tests/unit/engine/: test_execution_context.py  test_template_resolution.py  test_topological_sort.py
backend/tests/unit/nodes/: test_aggregate_node.py  test_excel_read_node.py  test_filter_node.py  test_logic_nodes.py  test_map_node.py  test_output_nodes.py  test_parse_stok_node.py  test_ticimax_oa1_batch.py  test_trigger_nodes.py
backend/tests/unit/services/: test_crypto_service.py  test_telegram_bot.py
backend/uploads/: Stock_Price_Update (003)_20260416_102306.xlsx  test_stok_listesi.xlsx
docs/: ARCHITECTURE.md  DEPLOYMENT.md  EXCEL_PREVIEW_MAPPING_SPEC.md  FIRST_DEPLOY.md  IMPLEMENTATION.md  MIGRATIONS.md  RUNTIME_INPUT_SPEC.md  SECURITY_INCIDENT_2026-04-15.md  SPECIFICATION.md  TASKS.md  TELEGRAM_BOT_SPEC.md  USAGE.md  prompt.md
docs/findings/: SELECTVARYASYON_LIMITATION.md
docs/nodes/: INPUT_EXCEL_READ_SPEC.md  OUTPUT_TELEGRAM_SPEC.md
frontend/: .dockerignore  .prettierrc.json  Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts  vitest.setup.ts
frontend/coverage/: index.html  lcov.info
frontend/coverage/lcov-report/: index.html
frontend/coverage/lcov-report/src/: App.tsx.html  index.html
frontend/coverage/lcov-report/src/api/: agent.ts.html  client.ts.html  executions.ts.html  index.html  nodes.ts.html  settings.ts.html  sites.ts.html  support.ts.html  workflows.ts.html
frontend/coverage/lcov-report/src/pages/: Dashboard.tsx.html  index.html  (+7 more)
frontend/coverage/src/: App.tsx.html  index.html
frontend/coverage/src/api/: agent.ts.html  client.ts.html  executions.ts.html  index.html  nodes.ts.html  settings.ts.html  sites.ts.html  support.ts.html  workflows.ts.html
frontend/coverage/src/pages/: Dashboard.tsx.html  ExecutionDetail.tsx.html  ExecutionHistory.tsx.html  Settings.tsx.html  Sites.tsx.html  SupportAgent.tsx.html  WorkflowEditor.tsx.html  WorkflowList.tsx.html  index.html
frontend/coverage/src/store/: chatStore.ts.html  index.html  workflowStore.ts.html
frontend/src/: App.tsx  main.tsx
frontend/src/api/: agent.ts  client.ts  executions.ts  nodes.ts  settings.ts  sites.ts  support.ts  workflows.ts
frontend/src/api/__tests__/: client.test.ts  workflows.test.ts
frontend/src/components/: RunWorkflowDialog.tsx
frontend/src/components/Canvas/: CustomNode.tsx  NodeConfigPanel.tsx  NodePalette.tsx  NodeRenderContext.tsx  iconMap.ts
frontend/src/components/Chat/: AgentChat.tsx  MessageInput.tsx  MessageList.tsx
frontend/src/components/common/: Layout.tsx
frontend/src/pages/: Dashboard.tsx  ExecutionDetail.tsx  ExecutionHistory.tsx  Settings.tsx  Sites.tsx  SupportAgent.tsx  WorkflowEditor.tsx  WorkflowList.tsx
frontend/src/store/: chatStore.ts  workflowStore.ts
frontend/src/store/__tests__/: chatStore.test.ts  workflowStore.test.ts
frontend/src/styles/: index.css
frontend/src/types/: execution.ts  node.ts  workflow.ts
(+27 files in other folders)
