[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agenticflow-backend"
version = "0.5.0"
description = "AgenticFlow backend — self-hosted Ticimax workflow automation platform"
readme = "../README.md"
requires-python = ">=3.11"
license = { file = "../LICENSE" }
authors = [{ name = "Burak Değirmenci" }]

# Runtime dependencies. Pinned loosely here; exact reproducible pins live in
# requirements.txt (kept as a lockfile equivalent for CI / Docker).
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.35",
    "alembic>=1.13.3",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-dotenv>=1.0.1",
    "cryptography>=43.0.0",
    "anthropic>=0.39.0",
    "google-genai>=0.3.0",
    "apscheduler>=3.10.4",
    "zeep>=4.2.1",
    "openpyxl>=3.1.5",
    "python-multipart>=0.0.12",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "freezegun>=1.5.0",
    "types-requests",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["tests*", "scripts*"]

# =============================================================================
# Ruff — lint + format (replaces black, isort, flake8, pyupgrade, etc.)
# =============================================================================
[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
    ".venv",
    "venv",
    "alembic/versions",
    "app/nodes/ticimax/_auto_generated.py",  # generated code is formatted by the generator
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "UP",   # pyupgrade
    "PL",   # pylint
    "RUF",  # ruff-specific
    "ASYNC",
    "S",    # flake8-bandit (security)
    "TID",  # flake8-tidy-imports
    "PTH",  # flake8-use-pathlib
    "PIE",
    "ARG",
    "RET",
    "ERA",  # eradicate (no commented-out code)
]
ignore = [
    "E501",    # line length handled by formatter
    "PLR0913", # too many args — sometimes fine (executor, factories)
    "PLR0912", # too many branches — executor is inherently branchy
    "PLR2004", # magic values — frequent in config parsing
    "S101",    # assert — fine in tests
    "B008",    # FastAPI Depends() in defaults is idiomatic
    "S603",    # subprocess without shell=True — intentional for CLI path
    "S607",    # starting process with partial path — CLI path is configurable
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",    # asserts are the whole point of tests
    "PLR2004", # magic values are fixtures / expected results
    "ARG001",  # fixtures that trigger side effects but aren't read
    "ARG002",  # same for method args
    "ARG005",  # monkeypatch lambdas often ignore cls/args
    "PLC0415", # local imports are fine in fixtures / test modules
    "SLF001",  # tests may touch _private helpers intentionally
]
"scripts/**/*.py" = ["S101", "T201", "PLC0415"]
"scripts/legacy_scripts/**/*.py" = ["ALL"]
"app/nodes/ticimax/_auto_generated.py" = ["ALL"]
"alembic/versions/*.py" = ["ALL"]

[tool.ruff.lint.isort]
known-first-party = ["app"]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
docstring-code-format = true

# =============================================================================
# MyPy — strict type checking
# =============================================================================
[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
namespace_packages = true
explicit_package_bases = true
exclude = [
    "^\\.venv/",
    "^venv/",
    "^alembic/versions/",
    "^app/nodes/ticimax/_auto_generated\\.py$",
    "^tests/",        # tests get their own lighter config below
    "^scripts/",
]

# Third-party libraries without stubs — allow untyped imports.
[[tool.mypy.overrides]]
module = [
    "zeep.*",
    "apscheduler.*",
    "openpyxl.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "app.nodes.ticimax._auto_generated"
ignore_errors = true

# Tests: relax strict rules that don't make sense for test fixtures.
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true

# =============================================================================
# Pytest
# =============================================================================
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--showlocals",
    "--tb=short",
]
markers = [
    "unit: fast, isolated unit tests (default)",
    "integration: runs executor + DB + services",
    "contract: verifies node registry contract",
    "slow: long-running tests (skipped by default)",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:pydantic.*",
    "ignore::DeprecationWarning:zeep.*",
    "ignore::PendingDeprecationWarning",
    # TODO(sprint-5): migrate datetime.utcnow() → datetime.now(UTC) and drop this.
    # Tracked in docs/TASKS.md under Sprint 5 (Observability & code hygiene).
    "ignore:datetime.datetime.utcnow:DeprecationWarning",
]

# =============================================================================
# Coverage
# =============================================================================
[tool.coverage.run]
source = ["app"]
branch = true
omit = [
    "app/nodes/ticimax/_auto_generated.py",
    "app/__init__.py",
    "*/tests/*",
]

[tool.coverage.report]
precision = 1
show_missing = true
skip_covered = false
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "\\.\\.\\.",
]
