[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agenticflow-backend"
version = "0.5.0"
description = "AgenticFlow backend — self-hosted Ticimax workflow automation platform"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Burak Değirmenci" }]
# README + LICENSE live at repo root (../README.md, ../LICENSE). We do not
# reference them here because `pip install -e .` in CI refuses paths outside
# the project directory. The license is declared via SPDX; the README is
# linked through the project URLs section below.

# Runtime dependencies. Loose ranges here; exact reproducible pins live in
# requirements.txt (kept as a lockfile equivalent for CI / Docker).
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.35",
    "alembic>=1.13.3",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-dotenv>=1.0.1",
    "cryptography>=43.0.0",
    "anthropic>=0.39.0",
    "google-genai>=0.3.0",
    "apscheduler>=3.10.4",
    "zeep>=4.2.1",
    "openpyxl>=3.1.5",
    "python-multipart>=0.0.12",
    "httpx>=0.27.0",
    "python-json-logger>=3.2.0",
]

[project.urls]
Homepage = "https://github.com/burakdegirmenci/AgenticFlow"
Repository = "https://github.com/burakdegirmenci/AgenticFlow"
Documentation = "https://github.com/burakdegirmenci/AgenticFlow/tree/main/docs"
Issues = "https://github.com/burakdegirmenci/AgenticFlow/issues"

[project.optional-dependencies]
dev = [
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "freezegun>=1.5.0",
    "types-requests",
]
# Optional Sentry error tracking; activated when SENTRY_DSN env is set at runtime.
sentry = [
    "sentry-sdk[fastapi]>=2.18.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["tests*", "scripts*"]

# =============================================================================
# Ruff — lint + format (replaces black, isort, flake8, pyupgrade, etc.)
# =============================================================================
[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
    ".venv",
    "venv",
    "alembic/versions",
    "app/nodes/ticimax/_auto_generated.py",  # generated code is formatted by the generator
    "scripts/legacy_scripts",                # one-off scripts scheduled for deletion
]

[tool.ruff.lint]
# Ratchet strategy: start with the essentials, enable more per sprint as the
# codebase is cleaned up. See docs/TASKS.md Sprint 4 for the plan to add
# PL / S / RUF / ASYNC / PTH / ARG / RET / ERA.
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "UP",   # pyupgrade
]
ignore = [
    "E501",    # line length handled by formatter
    "E741",    # ambiguous variable names in existing code — Sprint 4
    "B008",    # FastAPI Depends() in defaults is idiomatic
    "B904",    # raise-from — noisy on existing code, Sprint 4
    "F821",    # forward references inside strings are used by SQLAlchemy relationship()
    "SIM103",  # return-condition-directly — style
    "SIM105",  # contextlib.suppress — readable alternatives are fine
    "SIM108",  # ternary vs if/else — style pref, sometimes else branch is clearer
    "SIM118",  # dict.keys() in iter — cosmetic, Sprint 4
    "UP038",   # tuple-in-isinstance — deprecated in newer Python anyway
    "UP042",   # str+Enum vs StrEnum — codebase-wide refactor, Sprint 4
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",    # asserts are the whole point of tests
    "PLR2004", # magic values are fixtures / expected results
    "ARG001",  # fixtures that trigger side effects but aren't read
    "ARG002",  # same for method args
    "ARG005",  # monkeypatch lambdas often ignore cls/args
    "PLC0415", # local imports are fine in fixtures / test modules
    "SLF001",  # tests may touch _private helpers intentionally
]
"scripts/**/*.py" = ["S101", "T201", "PLC0415"]
"scripts/legacy_scripts/**/*.py" = ["ALL"]
"app/nodes/ticimax/_auto_generated.py" = ["ALL"]
"alembic/versions/*.py" = ["ALL"]

[tool.ruff.lint.isort]
known-first-party = ["app"]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
docstring-code-format = true

# =============================================================================
# MyPy — type checking (ratchet target: strict by Sprint 4)
# =============================================================================
[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
check_untyped_defs = true         # type-check body of untyped functions
no_implicit_optional = true
namespace_packages = true
explicit_package_bases = true
# These land in Sprint 4 as functions get annotations:
#   strict = true
#   disallow_untyped_defs = true
#   disallow_incomplete_defs = true
#   warn_return_any = true
exclude = [
    "^\\.venv/",
    "^venv/",
    "^alembic/versions/",
    "^app/nodes/ticimax/_auto_generated\\.py$",
    "^tests/",        # tests get their own lighter config below
    "^scripts/",
]

# Third-party libraries without stubs — allow untyped imports.
[[tool.mypy.overrides]]
module = [
    "zeep.*",
    "apscheduler.*",
    "openpyxl.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "app.nodes.ticimax._auto_generated"
ignore_errors = true

# Tests: relax strict rules that don't make sense for test fixtures.
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true

# =============================================================================
# Pytest
# =============================================================================
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--showlocals",
    "--tb=short",
]
markers = [
    "unit: fast, isolated unit tests (default)",
    "integration: runs executor + DB + services",
    "contract: verifies node registry contract",
    "slow: long-running tests (skipped by default)",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:pydantic.*",
    "ignore::DeprecationWarning:zeep.*",
    "ignore::PendingDeprecationWarning",
]

# =============================================================================
# Coverage
# =============================================================================
[tool.coverage.run]
source = ["app"]
branch = true
omit = [
    "app/nodes/ticimax/_auto_generated.py",
    "app/__init__.py",
    "*/tests/*",
]

[tool.coverage.report]
precision = 1
show_missing = true
skip_covered = false
# Sprint 5: router smoke tests + metrics + logging_config pushed coverage
# to ~48%. SPECIFICATION targets ≥80% on core; next ratchets (Sprint 6+)
# land scheduler integration, LLM providers, agent service, and full
# Ticimax hand-written node tests.
fail_under = 45
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "\\.\\.\\.",
]
